fixed multiple pictures using proper spacing

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,7 @@
 }
 .picture-with-description {
     display: table-caption;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 .image-shading {
     display: block;
@@ -289,4 +289,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+.multi-picture-spacing {
+    padding: 10px;
 }
